# VtaEngine

./: CMakeLists.txt  OnnxInfer.cpp  OnnxInfer.h  README.md  onnx.cpp
include/app/: VTAEngine.h
include/common/: MathUtils.h  Types.h
include/config/: LeadConfig.h
include/core/: CNNModel.h  CurrentDistributor.h  SuperAFCalculator.h  Threshold.h
include/data/: StdAFLoader.h
models/: test_model.onnx
src/app/: VTAEngine.cpp
src/config/: LeadConfig.cpp
src/core/: CNNModel.cpp  CurrentDistributor.cpp  SuperAFCalculator.cpp
src/data/: StdAFLoader.cpp
